--- a/DCServer/config/database.yml
+++ b/DCServer/config/database.yml
@@ -20,7 +20,7 @@ development:
   database: DCServer_development
   pool: 5
   username: DCServer
-  password:
+  password: DCServer
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -49,7 +49,7 @@ test:
   database: DCServer_test
   pool: 5
   username: DCServer
-  password:
+  password: DCServer
 
 production:
   adapter: postgresql
@@ -57,4 +57,4 @@ production:
   database: DCServer_production
   pool: 5
   username: DCServer
-  password:
+  password: DCServer
