--- a/DCServer/Gemfile
+++ b/DCServer/Gemfile
@@ -4,7 +4,9 @@ source 'https://rubygems.org'
 gem 'rails', '4.0.4'
 
 # Use postgresql as the database for Active Record
-gem 'pg'
+gem 'pg' , platform: :mri
+
+gem 'activerecord-jdbcpostgresql-adapter', platform: :jruby
 
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.2'
